working code and query db

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=password
-DB_NAME=my_database
-PORT=4000
+DB_PASSWORD=
+DB_NAME=progfams-jobs-app
+PORT=5000
+
+NODE_ENV=development
+API_KEY=
