--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/utils": "^9.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.16.3",
     "apollo-server": "^3.12.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.20",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
     "mysqli": "^3.1.4",
     "ts-node": "^10.9.1",
